frame/support/test/tests/derive_no_bound_ui/partial_eq.stderr
error[E0369]: binary operation `==` cannot be applied to type `<T as Trait>::C`
 --> $DIR/partial_eq.rs:7:2
  |
7 |     c: T::C,
  |     ^
  |
  = note: the trait `std::cmp::PartialEq` is not implemented for `<T as Trait>::C`
