frame/support/test/tests/derive_no_bound_ui/partial_eq.rs
trait Config {
	type C;
}

#[derive(frame_support::PartialEqNoBound)]
struct Foo<T: Config> {
	c: T::C,
}

fn main() {}
